arcboot-installer (0.008) UNRELEASED; urgency=medium

  * Joshua Kwan
    - Add a menu entry for arcboot-installer.
  * Martin Michlmayr
    - Only use arcboot on the r4k-ip22 and r5k-ip22 sub-architectures
      (i.e. SGI machines).
  * Translators: do not modify this changelog to record changes you make to
    po files. A record of your contributions will be added to the changelog
    at package release time by the output-l10n-changes program.

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 15 Mar 2004 16:52:31 -0800

arcboot-installer (0.007) unstable; urgency=low

  * Updated translations: 
   - Arabic (ar.po) by Ossama Khayat
   - Catalan (ca.po) by Jordi Mallach
   - Finnish (fi.po) by Tapio Lehtonen
   - Korean (ko.po) by Changwoo Ryu
   - Lithuanian (lt.po) by Kęstutis Biliūnas
   - Norwegian (nn.po) by Håvard Korsvoll
   - Romanian (ro.po) by Eddy Petrisor
   - Russian (ru.po) by Nikolai Prokoschenko
   - Slovak (sk.po) by Peter KLFMANiK Mann
   - Albanian (sq.po) by Elian Myftiu
   - Turkish (tr.po) by Osman Yüksel
   - Ukrainian (uk.po) by Eugeniy Meshcheryakov
   - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu
   - Traditional Chinese (zh_TW.po) by Tetralet
   - Initial Swedish translation (sv.po)
   - Korean (ko.po) by Changwoo Ryu
   - Norwegian bokmål (nb.po) by Håvard Korsvoll from Axel Bojer
   - German (de.po) by Dennis Stampfer

 -- Karsten Merker <merker@debian.org>  Sun, 14 Mar 2004 19:02:51 +0100

arcboot-installer (0.006) unstable; urgency=high

  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Ilgiz Kalmetev
    - Initial Russian translation.
  * Konstantinos Margaritis
    - Initial Greek translation (el.po)
  * Dennis Stampfer
    - Initial German translation (de.po)
  * Safir Šećerović
    - Updated Bosnian translation (bs.po)
  * Verok Istvan
    - Initial Hungarian translation (hu.po)
  * Konstantinos Margaritis
    - Updated Greek translation (el.po)