@@ -5,6 +5,8 @@ arcboot-installer (0.008) UNRELEASED; urgency=medium
   * Martin Michlmayr
     - Only use arcboot on the r4k-ip22 and r5k-ip22 sub-architectures
       (i.e. SGI machines).
+  * Thiemo Seufer
+    - Fix installation, remove the isinstallable check.
   * Translators: do not modify this changelog to record changes you make to
     po files. A record of your contributions will be added to the changelog
     at package release time by the output-l10n-changes program.
